--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "travel-site",
   "version": "1.0.0",
   "dependencies": {
-    "jquery": "3.3.1",
+    "jquery": "^3.3.1",
     "jquery-smooth-scroll": "2.2.0",
     "lazysizes": "4.0.4",
     "normalize.css": "^8.0.0",
@@ -11,9 +11,10 @@
   },
   "devDependencies": {
     "autoprefixer": "^8.6.4",
-    "babel-core": "6.26.3",
-    "babel-loader": "7.1.4",
-    "babel-preset-es2015": "6.24.1",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.4",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.24.1",
     "browser-sync": "^2.24.5",
     "del": "3.0.0",
     "gulp": "^3.9.1",
@@ -33,6 +34,7 @@
     "postcss-mixins": "^6.2.0",
     "postcss-nested": "^3.0.0",
     "postcss-simple-vars": "^4.1.0",
-    "webpack": "4.13.0"
+    "webpack": "^4.13.0",
+    "webpack-stream": "^4.0.3"
   }
 }
