--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "travel-site",
   "version": "1.0.0",
+  "webpage": "https://joshpeper.github.io/Travel_Site",
+  "scripts": {
+    "deploy": "gh-pages -d dist"
+  },
   "dependencies": {
     "jquery": "^3.3.1",
     "jquery-smooth-scroll": "^2.2.0",
@@ -17,6 +21,7 @@
     "babel-preset-es2015": "^6.24.1",
     "browser-sync": "^2.24.5",
     "del": "3.0.0",
+    "gh-pages": "^1.2.0",
     "gulp": "^3.9.1",
     "gulp-cssnano": "^2.1.3",
     "gulp-imagemin": "^4.1.0",
